width changes made

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <div class="container main-nav flex">
+        <div class="bucket main-nav flex">
             <a href="#" class="company-logo">
                 <img src="logoo.png">
             </a>
@@ -31,7 +31,7 @@
     </nav>
 
     <header>
-        <div class="container header-section flex">
+        <div class="bucket header-section flex">
             <div class="left-header">
                 <h1>Together We Will<br>Make It <span style="color: #FF731D;">Powerful</span>.</h1>
                 <p class="subheading">
@@ -151,7 +151,7 @@
     </section>
 
     <footer>
-        <div class="container footer-container flex">
+        <div class="bucket footer-container flex">
             <a href="#" class="company-logo">
                 <img src="logoo.png" alt="">
             </a>
