contact form added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,18 @@
                 <h2>We'll help your business to get <br> on a new stage!</h2>
             </div>
             <div class="rcon">
-                <a href="#" class="btn">Contact Us</a>
+                <form action="" method="post">
+                    <h2>Contact Us</h2>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="subject">Subject</label>
+                    <input type="text" id="subject" name="subject" required>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" required></textarea>
+                    <button type="submit">Send Message</button>
+                  </form>
             </div>
         </div>
     </section>
