get started btn works now

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#services" class="hover-links">Services</a></li>
                     <li><a href="#offer" class="hover-links">Our Work</a></li>
                     <li><a href="#about" class="hover-links">About</a></li>
-                    <li><a href="#" class="hover-links primary-btn">Get Started</a></li>
+                    <li><a href="#get-started" class="primary-btn">Get Started</a></li>
                 </ul>
             </div>
             <a href="#" class="nav-toggle hover-links" id="nav-toggle"><i class="fa-solid fa-bars"></i></a>
@@ -38,7 +38,7 @@
                     Our professional team will help you to reach all of your goals.
                     Feel free to contact us for further info.
                 </p>
-                <a href="#" class="primary-btn get-started-btn">Get Started</a>
+                <a href="#get-started" class="primary-btn get-started-btn">Get Started</a>
             </div>
             <div class="right-header">
                 <img src="topimg-home1.png">
@@ -103,7 +103,7 @@
         </div>
     </section>
 
-    <section class="quote">
+    <section class="quote" id="get-started">
         <div class="con container flex">
             <div class="lcon">
                 <p>REQUEST A QUOTE</p>
