--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h3><i class="fa-solid fa-check"></i> Visitor Conversion Rate</h3>
                 <h3><i class="fa-solid fa-check"></i> Keyword Analysis</h3>
                 <h3><i class="fa-solid fa-check"></i> Web Site Optimization</h3>
-                <a href="#" class="primary-btn get-started-btn">Get in Touch</a>
+                <a href="#get-started" class="primary-btn get-started-btn">Get in Touch</a>
             </div>
         </div>
     </section>
